ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: dex
spec:
  rules:
  - host: dex.minikube
    http:
      paths:
      - backend:
          service:
            name: dex
            port:
              number: 5556
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dex.minikube
    secretName: dex-tls
status:
  loadBalancer: {}
